Fixed h4 style to wrap text better.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,7 +50,7 @@ p {margin-bottom:18px}
 .indent-bot1 {margin-bottom:29px}
 .indent-bot3 {margin-bottom:45px}
 
-.indent-top {margin-top:-3px}
+.indent-top {margin-top:0px}
 .indent-top1 {margin-top:-10px}
 
 .margin-none {margin-bottom:0px}
@@ -181,10 +181,10 @@ h3 {
 h3 strong {color:#fff}
 h4 {
 	font-size:20px;
-	line-height:2em;
+	line-height:1em;
 	color:#ffffff;
 	letter-spacing:-1px;
-	margin-bottom:-8px;
+	margin-bottom:4px;
 	}
 h4 strong {color:#93ceee}
 h4 a {text-decoration:none; display:inline-block; color:#fff}
